Main: Major website layout bugfixes(generate button, encounter footer placement)

--- a/flaskr/static/stylesheets/encounter.css
+++ b/flaskr/static/stylesheets/encounter.css
@@ -187,11 +187,11 @@
 }
 
 .dice_hunger {
-    text-shadow: 0 0 0.5rem red;
+    text-shadow: 0 0 0.5rem var(--color_neon_green);
 }
 
 .dice_hunger .svg_dice {
-    color: red;
+    color: var(--color_neon_green);
 }
 
 
